corrigindo bug de lista quebrada

--- a/sobre.html
+++ b/sobre.html
@@ -48,66 +48,66 @@
 				<article id="prof">
   					<h2>PROFESSORES ORIENTADORES</h2>
   					<ul id="teacher">
-						<li>Denylson Melo Pereira</li>
-						<li>Antonio Santos de Sousa</li>
-						<li>Márcia Regina Soares Araújo</li>
-						<li>Antônio Carlos de Oliveira</li>
+						<li>Denylson Melo<br/>Pereira</li>
+						<li>Antonio Santos de<br/>Sousa</li>
+						<li>Márcia Regina<br/>Soares Araújo</li>
+						<li>Antônio Carlos<br/>de Oliveira</li>
 					</ul>
 				</article>
 				<article id="cyb">
 					<h2>CYBORG TEAM (DESENVOLVEDORES DA PLATAFORMA)</h2>
 					<ul id="team">
-						<li>João Paulo da Silva Carvalho</li>
+						<li>João Paulo da<br/>Silva Carvalho</li>
 						<li>Lucas Lima <br/> Souza</li>
-						<li>Manoel Eric N. de Oliveira </li>
-						<li>Tawan de Oliveira Rodrigues Maciel</li>
-						<li>Wendell dos Santos Silva</li>
-						<li>André Henrique Pereira Martins</li>
-						<li>Isabele Alves de Sousa</li>
+						<li>Manoel Eric N.<br/>de Oliveira </li>
+						<li>Tawan de Oliveira<br/>Rodrigues Maciel</li>
+						<li>Wendell dos Santos<br/>Silva</li>
+						<li>André Henrique<br/>Pereira Martins</li>
+						<li>Isabele Alves de<br/>Sousa</li>
 					</ul>
 				</article>
 				<article id="turm">
 					<h2>TURMA (DESENVOLVEDORES DO PROJETO)</h2>
 					<ul id="classrom">
-						<li>Adriano Silva de Araújo</li>
-						<li>Ana Beatriz Silva Aragão</li>
-						<li>Vitória Evenlly Lopes de Brito</li>
-						<li>Vanessa Cristina de Barros Silva de Sousa</li>
-						<li>Vinicius Assunção dos Santos</li>
+						<li>Adriano Silva de<br/>Araújo</li>
+						<li>Ana Beatriz Silva<br/>Aragão</li>
+						<li>Vitória Evenlly<br/>Lopes de Brito</li>
+						<li>Vanessa Cristina de<br/>Barros Silva de Sousa</li>
+						<li>Vinicius Assunção<br/>dos Santos</li>
 						<li>Robert Brazil <br/> Lisboa</li>
-						<li>Roberta Larissa da Silva Carvalho</li>
-						<li>Ruth Adnil de Sousa Soares</li>
-						<li>Sergina Maria Barros Pereira</li>
-						<li>Sthefany dos Santos Brazil</li>
-						<li>Mylena Maria Silva Sousa</li>
-						<li>Pedro Henrique da Silva Lopes</li>
-						<li>Raony Silva dos Santos</li>
-						<li>Marina dos Santos Silva</li>
-						<li>Matusalém Honorato de Moraes</li>
-						<li>Maurício Barros da Silva Júnior</li>
-						<li>Lucas Vinicius Nunes do Nascimento</li>
-						<li>Maria Eduarda da Silva Pereira</li>
-						<li>Lenon Aguiar Rodrigues</li>
+						<li>Roberta Larissa da<br/>Silva Carvalho</li>
+						<li>Ruth Adnil de Sousa<br/>Soares</li>
+						<li>Sergina Maria Barros<br/>Pereira</li>
+						<li>Sthefany dos Santos<br/>Brazil</li>
+						<li>Mylena Maria<br/>Silva Sousa</li>
+						<li>Pedro Henrique da<br/>Silva Lopes</li>
+						<li>Raony Silva dos<br/>Santos</li>
+						<li>Marina dos Santos<br/>Silva</li>
+						<li>Matusalém Honorato<br/>de Moraes</li>
+						<li>Maurício Barros da<br/>Silva Júnior</li>
+						<li>Lucas Vinicius Nunes<br/>do Nascimento</li>
+						<li>Maria Eduarda da<br/>Silva Pereira</li>
+						<li>Lenon Aguiar<br/>Rodrigues</li>
 						<li>Weslley Gomes <br/> Costa</li>
-						<li>Lucas Rodrigues Fechter dos Santos</li>
+						<li>Lucas Rodrigues<br/>Fechter dos Santos</li>
 						<li>Jodan Lima <br/> Galas</li>
-						<li>Jonathan Silva Santos</li>
-						<li>Laercio Souza da Silva</li>
-						<li>João Victor Carvalho Araujo</li>
-						<li>João Victor dos Santos Silva</li>
-						<li>Jamily de Araujo Sousa</li>
-						<li>Gabriel Assuero Ribeiro de Sousa</li>
-						<li>Ester Almeida de Sousa</li>
-						<li>Francisco de Jesus da Silva Lopes</li>
-						<li>Francisco Edward Pinho Cardoso</li>
+						<li>Jonathan Silva<br/>Santos</li>
+						<li>Laercio Souza da<br/>Silva</li>
+						<li>João Victor Carvalho<br/>Araujo</li>
+						<li>João Victor dos<br/>Santos Silva</li>
+						<li>Jamily de Araujo<br/>Sousa</li>
+						<li>Gabriel Assuero<br/>Ribeiro de Sousa</li>
+						<li>Ester Almeida de<br/>Sousa</li>
+						<li>Francisco de Jesus<br/>da Silva Lopes</li>
+						<li>Francisco Edward<br/>Pinho Cardoso</li>
 						<li>Diego Vieira <br/> da Silva</li>
-						<li>Emilly Martins Ferreira Horta</li>
-						<li>Carlos Vinicius Barros de Morais</li>
-						<li>Damares Suelen F. do Nascimento</li>
-						<li>Denilson da Silva Escorcio</li>
-						<li>Antonia Karliana Costa Santos</li>
-						<li>Antonia Mariane Rocha da Silva</li>
-						<li>Carlos Andre Araujo Sobral</li>
+						<li>Emilly Martins<br/>Ferreira Horta</li>
+						<li>Carlos Vinicius<br/>Barros de Morais</li>
+						<li>Damares Suelen F.<br/>do Nascimento</li>
+						<li>Denilson da Silva<br/>Escorcio</li>
+						<li>Antonia Karliana<br/>Costa Santos</li>
+						<li>Antonia Mariane<br/>Rocha da Silva</li>
+						<li>Carlos Andre Araujo<br/>Sobral</li>
 					</ul>
 				</article>
 			</section>
