teste de plugin do facebook v2

--- a/index.html
+++ b/index.html
@@ -91,19 +91,13 @@
 				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="figCap">
 					<img id="capa" src="img/fotos-snct/reufi-capa.jpg">
 				</figure></a>
-				<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
 			</aside>
 			<footer class="rodape" id="rod">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
 				<p>Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
 				
 				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Freufi.tavis%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=938081739601081" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-				
+				<div class="fb-comments" data-href="https://denylsonmelo.github.io/projeto-site-snct/index.html" data-width="550" data-numposts="5"></div>
 			</footer>
 		</div>
 	</body>
