teste de plugin do facebook v3

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<p>Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
 				
 				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Freufi.tavis%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=938081739601081" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-				<div class="fb-comments" data-href="https://denylsonmelo.github.io/projeto-site-snct/index.html" data-width="550" data-numposts="5"></div>
+				<div class="fb-comments" data-href="https://denylsonmelo.github.io/projeto-site-snct/index.html" data-width="550" data-numposts="5" data-colorscheme="dark"></div>
 			</footer>
 		</div>
 	</body>
