--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -7,14 +7,14 @@
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <style type="text/css">
-        @media screen and (min-width: 1080px) {
-			#logo-fig figcaption p {
-				display: block;
-				margin-top: -75px;
-				margin-left: 179px;
-				font-weight: bold;
-			}
-        }
+        	@media screen and (min-width: 1080px) {
+				#logofig figcaption p {
+					display: block;
+					margin-top: -75px;
+					margin-left: 179px;
+					font-weight: bold;
+				}
+        	}
 		</style>
         <link rel="stylesheet" type="text/css" href="css/videos.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<header>
-		<figure id="logo-fig">
+		<figure id="logofig">
 			<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
 			<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
 			<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
@@ -31,19 +31,13 @@
 				<p id="mobile">MOBILE</p>
 			</figcaption>
 		</figure>
-		<div id="mob">
-			<figure id="err">
-				<img src="img/screenc.png">
-				<figcaption><p>Página em construção</p></figcaption>
-			</figure>
-		</div>
 		</header>
 		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
         			<h1> Menu Principal </h1> 
         			<li><a href="index.html"> Home </a></li>
-        			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
+        			<li><a href="eaeNutri.html" id="here"> Iae Nutri </a></li>
         			<li><a href="sobre.html"> Sobre nós </a></li>
 	 			</ul>
    			</nav>
