--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         			<li><a href="sobre.html"> Sobre nós </a></li>
 	 			</ul>
    			</nav>
+   			<div id="ajud">
+   				<a id="textAjud" href="#rod">Ajude o projeto</a>
+   			</div>
 			<section class="postagens">
 				<hgroup id="imcscreen">
 					<h1 id="viewimc"><label for="massform">Veja aqui o seu IMC.</label></h1>
@@ -98,7 +101,7 @@
 					<div id="comm" class="fb-comments" data-href="https://denylsonmelo.github.io/projeto-site-snct/index.html" data-width="100%" data-numposts="5" data-colorscheme="dark"></div>
 				</div>
 				<h3 class="declar">Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
-				<p class="declar">Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
+				<p class="declar">Site 100% desenvolvido em HTML5, CSS3 e Javascript<br/>Otimizado para <span id="tavisNome">Google Chrome</span> e <span id="tavisNome">Mozilla Firefox</span>.</p>
 			</footer>
 		</div>
 	</body>
