mudando link de ajuda

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         			<h1> Menu Principal </h1> 
         			<li><a href="index.html" id="here"> Home </a></li>
         			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
-        			<li><a href="sobre.html"> Sobre nós </a></li>
+        			<li><a href="sobre.html" id="linkH"> Sobre nós </a></li>
 	 			</ul>
    			</nav>
    			<div id="ajud">
