Testando o git no atom

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -1,8 +1,8 @@
 ﻿<!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8"/>	   
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>  
+		<meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Reufi | Iae Nutri</title>
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
@@ -44,7 +44,7 @@
 		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
-        			<h1> Menu Principal </h1> 
+        			<h1> Menu Principal </h1>
         			<li><a href="index.html"> Home </a></li>
         			<li><a href="eaeNutri.html" id="here"> Iae Nutri </a></li>
         			<li><a href="sobre.html"> Sobre nós </a></li>
@@ -53,14 +53,14 @@
    			<div id="ajud">
    				<a id="textAjud" href="#rod">Ajude o projeto</a>
    			</div>
-			<section class="postagens"> 
+			<section class="postagens">
 				<article id="c0">
 					<h2>Por que é importante se preocupar com uma alimentação saudável na adolescência?</h2>
 					<iframe src="https://www.youtube.com/embed/ndpZwNEk_tI?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c1">
 					<h2>A gordura é sempre inimiga?</h2>
-					<iframe src="https://www.youtube.com/embed/1b9Gv2T8y74?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>					
+					<iframe src="https://www.youtube.com/embed/1b9Gv2T8y74?list=PLdPcUthFQCZCfUFuDdhhQmZ34W7didm1Y" frameborder="0" allowfullscreen></iframe>
 				</article>
 				<article id="c2">
 					<h2>Tecnologia: inimiga ou aliada?</h2>
@@ -80,14 +80,14 @@
 				</article>
 				<article id="c6">
 					<h2>Piramide alimentar</h2>
-					<iframe src="https://www.youtube.com/embed/dB3dq1tdRxI" frameborder="0" allowfullscreen></iframe>		
+					<iframe src="https://www.youtube.com/embed/dB3dq1tdRxI" frameborder="0" allowfullscreen></iframe>
 				</article>
 			</section>
 			<aside class="windgets">
 				<h2>Sobre a nutricionista</h2>
 				<img id="ft" src="img/nutri.jpg"/>
 				<span id="tx">
-					<h2>Tamires Lima da Silva</h2> 
+					<h2>Tamires Lima da Silva</h2>
 					<h3>Nutricionista, formada pela<br/>UNINOVAFAPI - Teresina, Piauí</h3>
     				<p>Durante sua graduação obteve experiências grandiosas atuando em diferentes áreas como, por exemplo, na parte social na Maternidade Evangelina Rosa, na parte de alimentação no SESC Teresina e no HUT(Hospital universitário de Teresina) área de clinicas e atualmente está trabalhando na área de UAN (Unidade de Alimentação e Nutrição) onde pretende continuar atuando.</p>
    					<p>Desde muito jovem Tamires se encantou pelo mundo da alimentação, cursou seu ensino médio no Instituto Federal de Educação,Ciência e Tecnologia do Piaui- Campus Parnaíba, onde realizou o Curso de Técnico em Edificações, porém sua paixão pela alimentação foi mais forte e incentivou-a ao estudo na área da nutrição.</p>
@@ -116,6 +116,7 @@
 					<p class="declar">Site 100% desenvolvido em HTML5, CSS3 e Javascript<br/>Otimizado para <span id="tavisNome">Google Chrome</span> e <span id="tavisNome">Mozilla Firefox</span>.</p>
 				</div>
 			</footer>
+			<!-- Hello World! -->
 		</div>
 	</body>
 	<script language="javascript" src="js/fadein-talk.js"></script>
