--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8"/>	   
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
+		<meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Reufi | Home</title>
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
@@ -13,7 +13,7 @@
 					margin-top: -75px;
 					margin-left: 179px;
 					font-weight: bold;
-				}
+				} /* Hello World! */
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" media="(min-width: 1080px") href="css/index_large.css"/>
@@ -43,7 +43,7 @@
 		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
-        			<h1> Menu Principal </h1> 
+        			<h1> Menu Principal </h1>
         			<li><a href="index.html" id="here"> Home </a></li>
         			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
         			<li><a href="sobre.html" id="linkH"> Sobre nós </a></li>
@@ -107,6 +107,6 @@
 			</footer>
 		</div>
 	</body>
-	<script language="javascript" src="js/fadein-talk.js"></script> 
-    <script language="javascript" src="js/imc-calc-script.js"></script> 
+	<script language="javascript" src="js/fadein-talk.js"></script>
+    <script language="javascript" src="js/imc-calc-script.js"></script>
 </html>
